--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,9 @@
 RewriteEngine On
 RewriteBase /
 
-# Protect live_time_editor.php
+# Protect live_time_editor.php and diagnostic tools
 RewriteRule ^admin/live_time_editor\.php$ admin/live_time_editor.php [L]
+RewriteRule ^admin/diagnose_email_issue\.php$ admin/diagnose_email_issue.php [L]
 RewriteRule ^admin(/(.*))?$ admin/index.php [L]
 
 # If the request is not for an actual file or directory
