Fix diagnostic tool redirect - move to root and output HTML immediately - Moved diagnose_email_issue.php from admin/ to root directory - Rewrote to output HTML immediately before any PHP processing - Updated .htaccess with explicit rule for root-level diagnostic file - Added test_diagnostic.php for testing - All changes can be reverted with: git revert HEAD

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,9 @@
 RewriteEngine On
 RewriteBase /
 
+# CRITICAL: Allow root-level diagnostic file FIRST (before ALL other rules)
+RewriteRule ^diagnose_email_issue\.php$ diagnose_email_issue.php [L]
+
 # CRITICAL: Check if diagnostic/test files exist and allow them FIRST
 # This must come before any other rules
 RewriteCond %{REQUEST_FILENAME} -f
