--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,15 @@
 RewriteEngine On
 RewriteBase /
 
-# CRITICAL: Allow root-level diagnostic file FIRST (before ALL other rules)
-# Check if the file exists and explicitly allow it
-RewriteCond %{REQUEST_FILENAME} -f
-RewriteCond %{REQUEST_URI} ^/diagnose_email_issue\.php$ [NC]
+# CRITICAL: Allow diagnostic and test files FIRST - MUST be before ALL other rules
+# These rules MUST match and stop processing immediately
+RewriteCond %{REQUEST_URI} ^/?diagnose_email_issue\.php$ [NC,OR]
+RewriteCond %{REQUEST_URI} ^/?test_diagnostic_simple\.php$ [NC]
 RewriteRule . - [L]
 
-# Also allow it even if file check fails (for debugging)
-RewriteCond %{REQUEST_URI} ^/diagnose_email_issue\.php$ [NC]
+# Also check by filename
+RewriteCond %{REQUEST_FILENAME} -f
+RewriteCond %{REQUEST_FILENAME} (diagnose_email_issue|test_diagnostic_simple)\.php$ [NC]
 RewriteRule . - [L]
 
 # CRITICAL: Check if diagnostic/test files exist and allow them FIRST
