--- a/.htaccess
+++ b/.htaccess
@@ -3,14 +3,10 @@ RewriteBase /
 
 # CRITICAL: Allow diagnostic and test files FIRST - MUST be before ALL other rules
 # These rules MUST match and stop processing immediately - NO conditions, just match and stop
-RewriteRule ^diagnose_email_issue\.php$ - [L]
-RewriteRule ^test_diagnostic_simple\.php$ - [L]
+RewriteRule ^(diagnose_email_issue|test_diagnostic_simple|email_diag)\.php$ - [L]
 
 # Also check by REQUEST_URI to be absolutely sure
-RewriteCond %{REQUEST_URI} ^/?diagnose_email_issue\.php [NC]
-RewriteRule . - [L]
-
-RewriteCond %{REQUEST_URI} ^/?test_diagnostic_simple\.php [NC]
+RewriteCond %{REQUEST_URI} ^/?(diagnose_email_issue|test_diagnostic_simple|email_diag)\.php [NC]
 RewriteRule . - [L]
 
 # CRITICAL: Check if diagnostic/test files exist and allow them FIRST
