--- a/.htaccess
+++ b/.htaccess
@@ -35,6 +35,11 @@ RewriteRule ^admin(/(.*))?$ admin/index.php [L]
 RewriteCond %{REQUEST_URI} ^/diagnose_email_issue\.php$ [NC]
 RewriteRule . - [L]
 
+# CRITICAL: Check if request is for an actual file FIRST
+# If it's a real file, don't redirect to index.php
+RewriteCond %{REQUEST_FILENAME} -f
+RewriteRule . - [L]
+
 # If the request is not for an actual file or directory
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
@@ -46,15 +51,14 @@ RewriteCond %{REQUEST_URI} !^/login\.php
 RewriteCond %{REQUEST_URI} !^/logout\.php
 RewriteCond %{REQUEST_URI} !^/config\.php
 RewriteCond %{REQUEST_URI} !^/functions\.php
-RewriteCond %{REQUEST_URI} !^/diagnose_email_issue\.php [NC]
+RewriteCond %{REQUEST_URI} !^/(diagnose_email_issue|test_diagnostic_simple|email_diag)\.php [NC]
 RewriteCond %{REQUEST_URI} !^/css/
 RewriteCond %{REQUEST_URI} !^/js/
 RewriteCond %{REQUEST_URI} !^/lib/
 RewriteCond %{REQUEST_URI} !^/admin/
-RewriteCond %{REQUEST_URI} !^/admin/diagnose_email_issue\.php [NC]
-RewriteCond %{REQUEST_URI} !^/admin/test_diagnostic\.php [NC]
+RewriteCond %{REQUEST_URI} !^/admin/(diagnose_email_issue|test_diagnostic)\.php [NC]
 
-# Redirect to index.php
+# Redirect to index.php ONLY if none of the above conditions match
 RewriteRule . index.php [L]
 
 # Basic security
