--- a/.htaccess
+++ b/.htaccess
@@ -10,57 +10,24 @@ RewriteRule . - [L]
 RewriteCond %{REQUEST_URI} ^/diag/ [NC]
 RewriteRule . - [L]
 
-# CRITICAL: Allow diagnostic and test files - redundant but safe
-RewriteRule ^(diagnose_email_issue|test_diagnostic_simple|email_diag)\.php$ - [L]
-RewriteCond %{REQUEST_URI} ^/?(diagnose_email_issue|test_diagnostic_simple|email_diag)\.php [NC]
-RewriteRule . - [L]
-
-# CRITICAL: Check if diagnostic/test files exist and allow them FIRST
-# This must come before any other rules
-RewriteCond %{REQUEST_FILENAME} -f
-RewriteCond %{REQUEST_URI} ^/admin/diagnose_email_issue\.php$ [NC]
-RewriteRule . - [L]
-
-RewriteCond %{REQUEST_FILENAME} -f
-RewriteCond %{REQUEST_URI} ^/admin/test_diagnostic\.php$ [NC]
-RewriteRule . - [L]
-
-RewriteCond %{REQUEST_FILENAME} -f
-RewriteCond %{REQUEST_URI} ^/admin/live_time_editor\.php$ [NC]
-RewriteRule . - [L]
-
-# Redirect all OTHER admin requests to index.php (but only if file doesn't exist)
+# Redirect all admin requests to admin/index.php (but only if file doesn't exist)
 RewriteCond %{REQUEST_URI} ^/admin/ [NC]
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_URI} !^/admin/diagnose_email_issue\.php [NC]
-RewriteCond %{REQUEST_URI} !^/admin/test_diagnostic\.php [NC]
-RewriteCond %{REQUEST_URI} !^/admin/live_time_editor\.php [NC]
 RewriteRule ^admin(/(.*))?$ admin/index.php [L]
 
-# CRITICAL: Explicitly allow diagnose_email_issue.php BEFORE any other rules
-RewriteCond %{REQUEST_URI} ^/diagnose_email_issue\.php$ [NC]
-RewriteRule . - [L]
-
-# If the request is not for an actual file or directory
-# (File check already done at top, this is just for non-files)
+# If the request is not for an actual file or directory, redirect to index.php
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} !\.(css|js|png|jpg|jpeg|gif|ico)$ [NC]
-
-# If not already on auto_auth.php or other essential files
 RewriteCond %{REQUEST_URI} !^/auto_auth\.php
 RewriteCond %{REQUEST_URI} !^/login\.php
 RewriteCond %{REQUEST_URI} !^/logout\.php
 RewriteCond %{REQUEST_URI} !^/config\.php
 RewriteCond %{REQUEST_URI} !^/functions\.php
-RewriteCond %{REQUEST_URI} !^/(diagnose_email_issue|test_diagnostic_simple|email_diag)\.php [NC]
 RewriteCond %{REQUEST_URI} !^/css/
 RewriteCond %{REQUEST_URI} !^/js/
 RewriteCond %{REQUEST_URI} !^/lib/
 RewriteCond %{REQUEST_URI} !^/admin/
-RewriteCond %{REQUEST_URI} !^/admin/(diagnose_email_issue|test_diagnostic)\.php [NC]
-
-# Redirect to index.php ONLY if none of the above conditions match
 RewriteRule . index.php [L]
 
 # Basic security
